2022-11-28T08:22:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3562966500 # 1069
* notice: last 14d: unq all: 5 32
* notice: prev accum: outdated-unq outdated-all / unq all: 707 2621 / 724 2654
* notice: next accum: outdated-unq outdated-all / unq all: 707 2621 / 724 2653
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-14]

2022-11-27T16:22:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3559013930 # 1067
* notice: last 14d: unq all: 5 33
* notice: prev accum: outdated-unq outdated-all / unq all: 705 2616 / 723 2650
* notice: next accum: outdated-unq outdated-all / unq all: 707 2621 / 724 2654
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-13] / []

2022-11-27T08:20:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3557393650 # 1066
* notice: last 14d: unq all: 5 34
* notice: prev accum: outdated-unq outdated-all / unq all: 705 2616 / 724 2654
* notice: next accum: outdated-unq outdated-all / unq all: 705 2616 / 723 2650
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -4 / +2 +5 -1 -4 / 1 1
* notice: removed / changed dates: [] / [2022-11-13]

2022-11-27T01:37:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3556207028 # 1065
* notice: last 14d: unq all: 6 38
* notice: prev accum: outdated-unq outdated-all / unq all: 705 2616 / 724 2653
* notice: next accum: outdated-unq outdated-all / unq all: 705 2616 / 724 2654
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-26]

2022-11-26T08:20:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3552917233 # 1063
* notice: last 14d: unq all: 6 37