@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-28T08:22:44Z",
+  "timestamp" : "2022-11-28T16:19:55Z",
   "count_outdated" : 2621,
   "uniques_outdated" : 707,
-  "count" : 2653,
-  "uniques" : 724,
+  "count" : 2655,
+  "uniques" : 725,
   "clones" : [
     {
       "timestamp": "2022-11-14T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-11-26T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-28T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
