@@ -1,6 +1,6 @@
 {
-  "count": 32,
-  "uniques": 5,
+  "count": 34,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-11-14T00:00:00Z",
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2022-11-26T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-28T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
