@@ -1,3 +1,11 @@
+2022-11-28T16:19:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3566643556 # 1070
+* notice: last 14d: unq all: 6 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 707 2621 / 724 2653
+* notice: next accum: outdated-unq outdated-all / unq all: 707 2621 / 725 2655
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-28]
+
 2022-11-28T08:22:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3562966500 # 1069
 * notice: last 14d: unq all: 5 32
